--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
   '_02-components/bg--color',
   '_02-components/block--breadcrumbs',
   '_02-components/block--header-social',
+  '_02-components/block--overlap-page-titles',
   '_02-components/block--search-modal', 
   '_02-components/buttons',
   '_02-components/color',
