--- a/views/components/navigation--home.twig
+++ b/views/components/navigation--home.twig
@@ -1,4 +1,4 @@
-<nav role="navigation" class="text--center main-nav">
+<nav role="navigation" class="text--center main-nav hidden--mob">
 	<ul class="flex flex--wrap justify--center">
 		{% for item in menu.get_items %}
 			<li class="nav-item {{item.classes | join(' ')}} grid--one grid--sm-third">
