--- a/views/components/sections/section--home-explore.twig
+++ b/views/components/sections/section--home-explore.twig
@@ -1,7 +1,7 @@
 <section class="section--home-explore flex flex--wrap justify--end align--items-start">
 	<img src="{{home.explore.image}}" class="grid--one">
-	<div class="block--home-explore-text bg--brown-light grid--three-fourths grid--sm-half grid--md-third spacing--horiz-2 spacing--vert-2">
+	<div class="block--home-explore-text bg--brown-light grid--gutter grid--sm-half grid--md-third spacing--horiz-1 spacing--vert-1 spacing--dsk-horiz-2 spacing--dsk-vert-2">
 	{% if home.explore.title %}<h2>{{home.explore.title}}</h2>{% endif %}
 	{% if home.explore.link %}<a class="font--large font--bold" href="{{home.explore.link.url}}" title="{{home.explore.link.title}}" target="{{home.explore.link.target}}">{{home.explore.link.title}}</a>{% endif %}
-	</div>
+</div>
 </section>
