--- a/views/components/sections/section--home-region.twig
+++ b/views/components/sections/section--home-region.twig
@@ -21,7 +21,7 @@
 			{% endfor %}
 		</div>
 	</div>
-	<div class="block--home-region-text grid--half grid--md-two-fifths bg--brown-light spacing--horiz-2 spacing--vert-2">
+	<div class="block--home-region-text grid--gutter grid--md-two-fifths bg--brown-light spacing--horiz-1 spacing--vert-1 spacing--dsk-horiz-2 spacing--dsk-vert-2">
 	{% if home.region.title %}<h2>{{home.region.title}}</h2>{% endif %}
 	{% if home.region.link %}<a class="font--large font--bold" href="{{home.region.link.url}}" title="{{home.region.link.title}}" target="{{home.region.link.target}}">{{home.region.link.title}}</a>{% endif %}
 </div>
