--- a/views/page-home.twig
+++ b/views/page-home.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 {% block header %}
 	{% include 'components/home--header.twig' %}
+	{% include 'components/header.twig' %}
 {% endblock %}
 {% block content %}
 	{% include 'components/sections/section--home-visit.twig' %}
