--- a/scss/_02-components/_icons.scss
+++ b/scss/_02-components/_icons.scss
@@ -63,3 +63,15 @@
         width: 100%;
     }
 }
+
+.icon-angle-right {
+    display: inline-block;
+    width: 9px;
+    height: 9px;
+    margin: 0px 5px 0px 3px;
+
+    svg {
+        width: 100%;
+        height: 100%;
+    }
+}
