--- a/scss/_02-components/_section--home-explore.scss
+++ b/scss/_02-components/_section--home-explore.scss
@@ -3,7 +3,12 @@
 
     .block--home-explore-text {
         margin-top: -4em;
-        margin-right: 8em;
+
+        @include media($screen-sm) {
+            margin-right: 8em;
+        }
+
+
         position: relative;
     }
 }
