--- a/scss/_03-layout/_navigation.scss
+++ b/scss/_03-layout/_navigation.scss
@@ -83,24 +83,29 @@ nav {
             display: none;
         }
     }
+
+    .hdr-logo-link {
+        @include media($screen-sm) {
+            margin: 0 auto;
+        }
+    }
 }
 
 .main--header {
     @include media($screen-sm) {
-    .nav-item {
-        padding: 0 1em;
+        .nav-item {
+            padding: 0 1em;
 
-        ul {
-            position: absolute;
-            margin: 0 auto !important;
+            ul {
+                position: absolute;
+                margin: 0 auto !important;
+            }
+
+            + span {
+                z-index: 9;
+            }
         }
 
-        + span {
-            z-index: 9;
-        }
-    }
-
-    
         .nav-drop {
             left: 50%;
             transform: translateX(-50%);
