--- a/static/icons/final/icons.fallback.css
+++ b/static/icons/final/icons.fallback.css
@@ -1,3 +1,5 @@
+.icon-angle-right { background-image: url('app/icons/angle-right.png'); background-repeat: no-repeat; }
+
 .icon-close { background-image: url('app/icons/close.png'); background-repeat: no-repeat; }
 
 .icon-corkscrew { background-image: url('app/icons/corkscrew.png'); background-repeat: no-repeat; }
