--- a/views/components/header.twig
+++ b/views/components/header.twig
@@ -1,4 +1,4 @@
-<header class="header main--header max-wrap margin--center dsk--flex flex--wrap align--items-baseline spacing--gutter-mob">
+<header class="header main--header max-wrap margin--center dsk--flex flex--wrap align--items-baseline spacing--gutter-mob {% if post.slug == 'home' %}hidden--dsk{% endif %}">
 	<a class="hdr-logo-link" href="/" title="{{site.name}} Logo" rel="home"><i class="icon-logo-tab" data-grunticon-embed></i></a>
 	<label class="menu--trigger hidden--dsk"><span></span></label>
 	{% include 'components/navigation.twig' %}
