--- a/scss/_02-components/_section--home-explore.scss
+++ b/scss/_02-components/_section--home-explore.scss
@@ -11,4 +11,13 @@
 
         position: relative;
     }
+
+    @include media($screen-xs) {}
+
+    @include media($max-sm) {
+        justify-content: center;
+    }
+
+
+    @include media($screen-md) {}
 }
