--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -34,7 +34,6 @@ $h6: 0.7 * $base-font-size;
 
 h1 {
     font-size: $h1;
-
     line-height: 1.1;
     margin-bottom: 0.2em;
 }
@@ -47,7 +46,6 @@ h2 {
 
 h3 {
     font-size: 0.85em;
-
 }
 
 h4 {
@@ -183,4 +181,17 @@ code, pre {
 
 p {
     margin-bottom: 1em;
+}
+
+.home {
+    h2 {
+        @include media($screen-xs) {}
+
+        @include media($screen-sm) {
+            font-size: 2.8em;
+        }
+
+
+        margin-bottom: .5em;
+    }
 }
