--- a/scss/_02-components/_font--utils.scss
+++ b/scss/_02-components/_font--utils.scss
@@ -9,7 +9,11 @@
     }
     
 }
-
+.home{
+    .font--large{
+        font-size: 1.5em;
+    }
+}
 .font--sans {
     font-family: $base-sans-font;
 }
