--- a/static/icons/final/icons.fallback.css
+++ b/static/icons/final/icons.fallback.css
@@ -20,5 +20,7 @@
 
 .icon-taste-your-way { background-image: url('app/icons/taste-your-way.png'); background-repeat: no-repeat; }
 
+.icon-underline { background-image: url('app/icons/underline.png'); background-repeat: no-repeat; }
+
 .icon-wine-glass { background-image: url('app/icons/wine-glass.png'); background-repeat: no-repeat; }
 
