--- a/views/components/sections/section--home-region.twig
+++ b/views/components/sections/section--home-region.twig
@@ -1,6 +1,6 @@
-<section class="section--home-region max-wrap margin--center spacing--gutter">
+<section class="section--home-region max-wrap margin--center spacing--gutter spacing--dsk-vert-5">
 	<div class="flex flex--wrap justify--between">
-		<div class="grid--sm-two-thirds flex flex--wrap justify--between">
+		<div class="block--center-images grid--sm-two-thirds flex flex--wrap justify--between">
 			{% for image in home.region.gallery %}
 				{% if loop.index == 1 %}
 					<div class="grid--one margin--bot-1"><img align="right" data-original="{{image|resize(1284,856)}}" alt="{{image.post_title}}" class="grid--three-fourths" data-original-set="{{image|resize(640)}} 640w, {{image|resize(1000,666)}} 750w, {{image|resize(612,408)}} 768w, {{image|resize(678,452)}} 834w, {{image|resize(870,578)}} 1024w, {{image|resize(1284,856)}} 1320w"></div>
@@ -21,9 +21,9 @@
 			{% endfor %}
 		</div>
 	</div>
-	<div class="block--home-region-text grid--gutter grid--md-two-fifths bg--brown-light spacing--horiz-1 spacing--vert-1 spacing--dsk-horiz-2 spacing--dsk-vert-2">
+	<div class="block--home-region-text  grid--sm-three-fifths grid--lg-third bg--brown-light spacing--horiz-1 spacing--vert-1 spacing--dsk-horiz-2 spacing--dsk-vert-2">
 	{% if home.region.title %}<h2>{{home.region.title}}</h2>{% endif %}
-	{% if home.region.link %}<a class="font--large font--bold" href="{{home.region.link.url}}" title="{{home.region.link.title}}" target="{{home.region.link.target}}">{{home.region.link.title}}</a>{% endif %}
+	{% if home.region.link %}<a class="font--large font--bold icon-underline" href="{{home.region.link.url}}" title="{{home.region.link.title}}" target="{{home.region.link.target}}">{{home.region.link.title}}</a>{% endif %}
 </div>
 	
 </section>
