--- a/app/icons/icons.fallback.css
+++ b/app/icons/icons.fallback.css
@@ -12,6 +12,8 @@
 
 .icon-social--facebook { background-image: url('app/icons/social--facebook.png'); background-repeat: no-repeat; }
 
+.icon-social--instagram { background-image: url('app/icons/social--instagram.png'); background-repeat: no-repeat; }
+
 .icon-social--search { background-image: url('app/icons/social--search.png'); background-repeat: no-repeat; }
 
 .icon-social--twitter { background-image: url('app/icons/social--twitter.png'); background-repeat: no-repeat; }
