--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,7 @@
   '_02-components/margin',
   '_02-components/mobile--nav',
   '_02-components/section--child-blocks',
+  '_02-components/section--footer-links',
   '_02-components/section--footer-signup',
   '_02-components/section--home-events',
   '_02-components/section--home-explore',
