--- a/views/base.twig
+++ b/views/base.twig
@@ -10,7 +10,7 @@
 		{% include 'components/header.twig' %}
 	{% endblock %}
 
-<main role="main" class="content-wrapper">
+<main role="main" class="content-wrapper spacing--horiz-3 spacing--vert-1">
 	{% if title %}<h1>{{title}}</h1>{% endif %}
 		{% block content %}
 			Sorry, no content
