--- a/views/components/sections/section--footer-signup.twig
+++ b/views/components/sections/section--footer-signup.twig
@@ -1,9 +1,9 @@
-<section class="section--footer-signup margin--vert-3  bg--red spacing--vert-2 spacing--dsk-vert-3 flex flex--wrap justify--between spacing--horiz-2 align--items-center">
-	<div class="grid--one grid--sm-fourth grid--md-two-fifths">
-		<i class="icon-taste-your-way grid--half grid--md-three-fifths block " data-grunticon-embed></i>
+<section class="section--footer-signup bg--red spacing--vert-1 spacing--horiz-1 spacing--dsk-vert-2 spacing--dsk-vert-3 flex flex--wrap justify--between spacing--dsk-horiz-2 align--items-center">
+	<div class="grid--one  grid--md-two-fifths">
+		<i class="icon-taste-your-way grid--half grid--sm-two-fifths grid--md-three-fifths block" data-grunticon-embed></i>
 	</div>
-	<div class="grid--one grid--sm-three-fourths grid--md-three-fifths">
-		<h2>Sign up for news and events!</h2>
+	<div class="grid--one grid--md-three-fifths">
+		<h2 class="large">Sign up for news and events!</h2>
 		{{options.footer.email}}
 	</div>
 </section>
