--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -42,6 +42,18 @@ h2 {
     font-size: $h2;
     letter-spacing: 0;
     line-height: 1.1;
+
+    &.large {
+        @include media($screen-xs) {}
+
+
+        @include media($screen-sm) {
+            font-size: 2.8em;
+        }
+
+
+        margin-bottom: .5em;
+    }
 }
 
 h3 {
@@ -186,6 +198,7 @@ p {
 .home {
     h2 {
         @include media($screen-xs) {}
+
 
         @include media($screen-sm) {
             font-size: 2.8em;
