--- a/scss/_02-components/_block--search-modal.scss
+++ b/scss/_02-components/_block--search-modal.scss
@@ -5,7 +5,7 @@
     padding-top: 3em !important;
     top: 50%;
     left: 50%;
-    z-index: 99;
+    z-index: 99999999;
 
     form {
         margin-top: 2em;
@@ -75,7 +75,7 @@ body {
 
         &:after {
             opacity: 1;
-            z-index: 9;
+            z-index: 999999;
             transform: translateY(0);
             transition: z-index 2s ease, transform 0.3s $base-cubic, opacity 0.2s $base-cubic;
         }
