--- a/views/base.twig
+++ b/views/base.twig
@@ -10,8 +10,8 @@
 		{% include 'components/header.twig' %}
 	{% endblock %}
 
-<main role="main" class="content-wrapper spacing--horiz-3 spacing--vert-1">
-	{% if title %}<h1>{{title}}</h1>{% endif %}
+<main role="main" class="content-wrapper  spacing--vert-1">
+
 		{% block content %}
 			Sorry, no content
 		{% endblock %}
