--- a/views/index.twig
+++ b/views/index.twig
@@ -1,9 +1,9 @@
 {% extends "base.twig" %}
-
 {% block content %}
-	<h2>{{foo}}</h2>
-	<p>{{qux}}</p>
-	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-	{% endfor %}
+	<section class="section--winery-list spacing--gutter max-wrap margin--center spacing--vert-3">
+		{% if title %}<h1>{{title}}</h1>{% endif %}
+		{% for post in posts %}
+			{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+		{% endfor %}
+	</section>
 {% endblock %}
