--- a/views/page-explore-our-wineries.twig
+++ b/views/page-explore-our-wineries.twig
@@ -4,7 +4,7 @@
 	{% include 'components/blocks/block--breadcrumbs.twig' %}
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 		<section class="section--page-header spacing--vert-2">
-			<h1 class="article-h1 text--center">{{post.title}}</h1>
+			<h1 class="article-h1 text--center">{{post.post_title}}</h1>
 		</section>
 		{% include 'components/sections/section--winery-map.twig' %}
 		{% include 'components/sections/section--winery-list.twig' %}
