--- a/views/single-event.twig
+++ b/views/single-event.twig
@@ -1,16 +1,16 @@
 {% extends "base.twig" %}
 {% block content %}
 <section class="section--single-header spacing--gutter margin--center max-wrap"><img src="{{post.thumbnail}}" width="100%"></section>
-{% include 'components/blocks/block--breadcrumbs.twig' %}
-<article class="flex flex--wrap justify--around align--items-start spacing--vert-4">
-	<section class="spacing--gutter grid--half">
+<div class="max-wrap margin--center spacing--gutter margin--horiz-1">{% include 'components/blocks/block--breadcrumbs.twig' %}</div>
+<article class="flex flex--wrap justify--between align--items-start spacing--dsk-vert-4 winery-wrap margin--center spacing--gutter">
+	<section class="seciton--winery-content order--1 grid--one grid--sm-three-fifths">
 		<h1>{{post.title}}</h1>
 		{# {{event|print_r}} #}
 		<p class="font--large">{{event.description}}</p>
 		{{post.content}}
 	</section>
-	<aside class="grid--sixth">
-		<img src="http://placekitten.com/g/500/500" width="100%" alt="">
+	<aside class="section--winery-aside grid--one grid--md-fourth spacing--vert-1">
+
 	</aside>
 </article>
 
