--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,6 +45,7 @@
   '_02-components/section--winery-amenities',
   '_02-components/section--winery-aside',
   '_02-components/section--winery-content',
+  '_02-components/section--winery-filter',
   '_02-components/section--winery-list',
   '_02-components/section--winery-map',
   '_02-components/section--winery-press',
