--- a/views/components/sections/section--winery-content.twig
+++ b/views/components/sections/section--winery-content.twig
@@ -2,6 +2,6 @@
 	<h1>{{post.title}}</h1>
 	<div class="font--large">{{winery.content.content}}</div>
 	{% if winery.content.events %}
-		<div class="bg--brown-faded spacing--vert-1 spacing--horiz-1 spacing--dsk-vert-2 spacing--dsk-horiz-2">View <a href="{{winery.content.events}}">upcoming events</a> on our website.</div>
+		<div class="bg--brown-faded spacing--vert-1 spacing--horiz-1 spacing--dsk-vert-2 spacing--dsk-horiz-2">View <a target="_blank" href="{{winery.content.events}}">upcoming events</a> on our website.</div>
 	{% endif %}
 </section>
