--- a/views/components/blocks/block--winery.twig
+++ b/views/components/blocks/block--winery.twig
@@ -1,5 +1,11 @@
 <div class="block--winery grid--one flex flex--wrap justify--between align--items-start border--1 spacing--vert-2">
 	
 	<h2 class="grid--one grid--sm-fourth font--standard color--brown-dark"><a href="{{winery.link}}" class="color--brown-dark">{{winery.title}}</a></h2>
-	<div class="winery--details grid--one grid--sm-three-fourths font--medium">{{winery.winery.content.description}}</div>
+	<div class="winery--details grid--one grid--sm-three-fourths font--medium">
+		{% if winery.image %}
+			<img width="300" align="right" src="{{winery.image|resize(600,600)}}" />
+		{% endif %}
+		{{winery.winery.content.description}}
+		<a href="{{post.permalink}}">Read More</a>
+	</div>
 </div>
