--- a/views/components/sections/section--winery-filter.twig
+++ b/views/components/sections/section--winery-filter.twig
@@ -1,20 +1,22 @@
 <section class="section--winery-filter">
-	<form action="section--winery-filter_submit" method="get" accept-charset="utf-8">
-		<select name="Amenities" >
+
+	<form id="wineryfilter" action="{{site.url}}/explore-our-wineries/?filter=amenity_id" method="get" accept-charset="utf-8">
+		<select name="amenity_id" id="amenity_id">
 			{% for amenity in amenities %}
 				<option value="{{amenity.term_id}}">{{amenity.name}}</option>
 			{% endfor %}
-			
 		</select>
+		<input type="submit" name="" value="Search">
 	</form>
 	<div class="block--day-filter font--large">
 		<strong>Days open:</strong>
-<a href="">Monday</a>
-<a href="">Tuesday</a>
-<a href="">Wednesday</a>
-<a href="">Thursday</a>
-<a href="">Friday</a>
-<a href="">Saturday</a>
-<a href="">Sunday</a>
+		<a href="">Monday</a>
+		<a href="">Tuesday</a>
+		<a href="">Wednesday</a>
+		<a href="">Thursday</a>
+		<a href="">Friday</a>
+		<a href="">Saturday</a>
+		<a href="">Sunday</a>
 	</div>
 </section>
+</script>
