--- a/views/page-explore-our-wineries.twig
+++ b/views/page-explore-our-wineries.twig
@@ -5,6 +5,7 @@
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 		<section class="section--page-header spacing--vert-2">
 			<h1 class="article-h1 text--center">{{post.post_title}}</h1>
+			{% if currentFilter != null %}Currently filtering by all wineries with {{currentFilter.name}}. <a href="{{site.url}}/explore-our-wineries/">View All Wineries</a>{% endif %}
 		</section>
 		{% include 'components/sections/section--winery-map.twig' %}
 		{% include 'components/sections/section--winery-list.twig' %}
