--- a/scss/_02-components/_mobile--nav.scss
+++ b/scss/_02-components/_mobile--nav.scss
@@ -23,7 +23,7 @@
             height: 24px;
             margin-top: -0.6em;
             position: relative;
-            z-index: 99999;
+            z-index: 99999999;
             display: block;
             -webkit-tap-highlight-color: transparent !important;
 
